log
Thu 09 May 2024 03:34:39 AM UTC: 
 tests:  1|8
total_score: 0/70
0833193
Thu 09 May 2024 04:39:26 AM UTC: 
 treemap.c | 13 +++++++++----
 1 file changed, 9 insertions(+), 4 deletions(-)
 tests:  4|7
total_score: 5/70
7e6fa20
Thu 09 May 2024 04:43:50 AM UTC: 
 treemap.c | 25 +++++++++++++++++++++++--
 1 file changed, 23 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:100:1: error: control reaches end of non-void function [-Werror=return-type]
  100 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
60f4007
Thu 09 May 2024 04:44:29 AM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  11|6
total_score: 15/70
6dcae4c
Thu 09 May 2024 05:07:03 AM UTC: 
 treemap.c | 48 +++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 47 insertions(+), 1 deletion(-)
 tests:  13|5
total_score: 25/70
84db465
Thu 09 May 2024 05:09:03 AM UTC: 
 treemap.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  15|4
total_score: 25/70
8ac0983
Thu 09 May 2024 05:10:31 AM UTC: 
 treemap.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
 tests:  13|5
total_score: 25/70
25bb3fa
Thu 09 May 2024 05:11:00 AM UTC: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
b79f1d6
Thu 09 May 2024 05:25:38 AM UTC: 
 treemap.c | 55 ++++++++++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 54 insertions(+), 1 deletion(-)
 tests:  0|0
042c31c
